[gd_scene load_steps=7 format=3 uid="uid://c7ikqu34lavlb"]

[ext_resource type="Texture2D" uid="uid://bj85t0kp5iu38" path="res://graphics/enemies/scout.png" id="1_1iilg"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_qwu8j"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_40lyy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nmmuw"]
shader = ExtResource("2_40lyy")
shader_parameter/color = Color(0.85098, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ycs40"]
radius = 53.0094

[sub_resource type="CircleShape2D" id="CircleShape2D_jfrgc"]
radius = 845.015

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_qwu8j")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_nmmuw")
position = Vector2(34, 27)
rotation = 1.5708
texture = ExtResource("1_1iilg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ycs40")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_jfrgc")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(112, -27)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(121, 12)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
